; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_duplicator_capture_width.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_duplicator_capture_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.duplicator_capture = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @duplicator_capture_width to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @duplicator_capture_width(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.duplicator_capture*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.duplicator_capture*
  store %struct.duplicator_capture* %5, %struct.duplicator_capture** %3, align 8
  %6 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %7 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = srem i32 %8, 180
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %13 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %17 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  br label %19

19:                                               ; preds = %15, %11
  %20 = phi i32 [ %14, %11 ], [ %18, %15 ]
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
